@@ -1,4 +1,8 @@
-﻿drkns 05.02.2016 09:41:13 +0200 - build 4540
+﻿drkns 05.02.2016 21:26:41 +0200 - build 4541
+
+1. Уточнение 4525.
+
+drkns 05.02.2016 09:41:13 +0200 - build 4540
 
 1. С форума: Пропадает курсор в запущенных внешних консольных приложениях.
 
